--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: build Images
+    env:
+      NETWORK: ${{inputs.network}}
     steps:
       # same as git fetch --depth 1
       - name: Checkout
