--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.6"
 services:
   ethstats:
     image: ghcr.io/noku-team/ethstats-server-poa:latest
+    environment: 
+      NETWORK: noku
     restart: always
     ports:
       - "80:3000/tcp"
