chore(naming): update noku with nokuchain

--- a/.github/workflows/build-network.yml
+++ b/.github/workflows/build-network.yml
@@ -6,7 +6,7 @@ on:
         type: choice
         description: Choose a Network
         options:
-          - noku
+          - nokuchain
           - 3achain
           - luxochain
 jobs:
